Update: Tweaked line-height, file rename

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			
 			<div class="section summary flex">
 				<div class="left-col">Summary</div>
-				<div class="right-col lh-title">
+				<div class="right-col">
 					Experienced Senior Software Engineer and Technical Lead known for intuitive and innovative full-stack solutions. Expert in Agile, DevOps, and UX principles. Skilled in end-to-end development and recognized for solving complex issues and solutions with speed. Nicknamed "The Cleaner" for tackling challenging problems.
 				</div>
 			</div>
@@ -107,7 +107,7 @@
 						<div class="work-dates">2009 – 2014</div>
 						
 						<ul class="bl-bullet-list">
-							<li>Mentored others in web development, best practices, and quality standards.</li>
+							<li>Mentored in web development, best practices, and quality standards.</li>
 							<li>Implemented enterprise-wide centralized common component CMS templates for over 50K web pages.</li>
 							<li>Chief Programmer for IBM's CEO, Ginni Rometty projects including ibm.com home page, intranet home page, and employee core values sites.</li>
 							<li>Led the cleanup and conversion of 12,000 CGI redirects to htaccess files through the creation of an automated conversion script.</li>
@@ -133,7 +133,7 @@
 			
 			<div class="section skills flex">
 				<div class="left-col">Skills</div>
-				<div class="right-col lh-title">
+				<div class="right-col">
 					<div>HTML • CSS • JavaScript • REST APIs • Python • Django • Postgres • DevOps • AWS • IBM Cloud • Openshift • NPM • build processes • automated testing • CI/CD • agile • front-end development • content management • UX principles and research • accessibility • requirements gathering • problem solving • mentorship • collaboration • prototyping • efficiency • standards and best practices
 					</div>
 				</div>
