--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<meta name="geo.country" content="zz">
 		<meta name="dcterms.date" content="2023-08-30">
 		<title>Michael Santelia - Resume</title>
-		<link href="tachyons.min.css" rel="stylesheet">
-		<link href="bloodline.min.css" rel="stylesheet">
+		<link href="tachyons.min.css?sdf" rel="stylesheet">
+		<link href="bloodline.min.css?sdfs" rel="stylesheet">
 		<link href="custom.css" rel="stylesheet">
 	</head>
 
@@ -24,17 +24,29 @@
 					<div class="initials-circle flex justify-center items-center f2 br-100 ba bw1">MS</div>
 				</div>
 				<div class="right-col">
-					<div class="name mt3 f2" style="margin-left: -5px;">Michael Santelia</div>
+					<div class="flex justify-between">
+						<div class="name mt3 f2" style="margin-left: -5px;">Michael Santelia</div>
+						<div>
+							<a href="Resume - Michael Santelia.pdf" target="blank" class="bl-current-color flex items-center">
+								<svg class="icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><defs><style>.cls-1{fill:none;}</style></defs><title>document--download</title><polygon points="30 25 28.586 23.586 26 26.172 26 18 24 18 24 26.172 21.414 23.586 20 25 25 30 30 25"/><path d="M18,28H8V4h8v6a2.0058,2.0058,0,0,0,2,2h6v3l2,0V10a.9092.9092,0,0,0-.3-.7l-7-7A.9087.9087,0,0,0,18,2H8A2.0058,2.0058,0,0,0,6,4V28a2.0058,2.0058,0,0,0,2,2H18ZM18,4.4,23.6,10H18Z"/><rect class="cls-1" width="32" height="32"/></svg>
+								<span class="ml1">PDF version</span>
+							</a>
+						</div>
+					</div>
 					<div class="mt3 flex items-center" style="margin-left:-11px;">
 						<div class="location flex items-center">
-							<svg class="icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><defs><style>.cls-1 {fill: none;  }</style></defs><path d="M16,18a5,5,0,1,1,5-5A5.0057,5.0057,0,0,1,16,18Zm0-8a3,3,0,1,0,3,3A3.0033,3.0033,0,0,0,16,10Z"/>  <path d="M16,30,7.5645,20.0513c-.0479-.0571-.3482-.4515-.3482-.4515A10.8888,10.8888,0,0,1,5,13a11,11,0,0,1,22,0,10.8844,10.8844,0,0,1-2.2148,6.5973l-.0015.0025s-.3.3944-.3447.4474ZM8.8125,18.395c.001.0007.2334.3082.2866.3744L16,26.9079l6.91-8.15c.0439-.0552.2783-.3649.2788-.3657A8.901,8.901,0,0,0,25,13,9,9,0,1,0,7,13a8.9054,8.9054,0,0,0,1.8125,5.395Z"/>  <rect class="cls-1" width="32" height="32" transform="translate(0 32) rotate(-90)"/></svg>
+							<svg class="bl-current-color icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><defs><style>.cls-1{fill:none;}</style></defs><path d="M16,18a5,5,0,1,1,5-5A5.0057,5.0057,0,0,1,16,18Zm0-8a3,3,0,1,0,3,3A3.0033,3.0033,0,0,0,16,10Z"/><path d="M16,30,7.5645,20.0513c-.0479-.0571-.3482-.4515-.3482-.4515A10.8888,10.8888,0,0,1,5,13a11,11,0,0,1,22,0,10.8844,10.8844,0,0,1-2.2148,6.5973l-.0015.0025s-.3.3944-.3447.4474ZM8.8125,18.395c.001.0007.2334.3082.2866.3744L16,26.9079l6.91-8.15c.0439-.0552.2783-.3649.2788-.3657A8.901,8.901,0,0,0,25,13,9,9,0,1,0,7,13a8.9054,8.9054,0,0,0,1.8125,5.395Z"/>  <rect class="cls-1" width="32" height="32" transform="translate(0 32) rotate(-90)"/></svg>
 							<div class="ml1">Raleigh, NC</div>
 						</div>
-						<div class="pl1 ml3 email flex items-center">
-							<svg style="margin-top:1px;" class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><defs><style>.cls-1{fill:none;}</style></defs><title>email</title><path d="M28,6H4A2,2,0,0,0,2,8V24a2,2,0,0,0,2,2H28a2,2,0,0,0,2-2V8A2,2,0,0,0,28,6ZM25.8,8,16,14.78,6.2,8ZM4,24V8.91l11.43,7.91a1,1,0,0,0,1.14,0L28,8.91V24Z" transform="translate(0)"/><rect class="cls-1" width="32" height="32"/></svg>
-							<div class="ml1"><a href="mailto:ecumike@gmail.com">ecumike@gmail.com</a></div>
+						
+						<div class="pl1 ml3 email">
+							<a class="flex items-center textcolor bl-current-color" href="mailto:ecumike@gmail.com">
+								<svg style="margin-top:1px;" class="bl-current-color icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><defs><style>.cls-1{fill:none;}</style></defs><title>email</title><path d="M28,6H4A2,2,0,0,0,2,8V24a2,2,0,0,0,2,2H28a2,2,0,0,0,2-2V8A2,2,0,0,0,28,6ZM25.8,8,16,14.78,6.2,8ZM4,24V8.91l11.43,7.91a1,1,0,0,0,1.14,0L28,8.91V24Z" transform="translate(0)"/><rect class="cls-1" width="32" height="32"/></svg>
+								<span class="ml1">ecumike@gmail.com</span>
+							</a>
 						</div>
-						<div class="ml3 phone flex items-center">
+						
+						<div class="ml3 phone flex items-center bl-current-color">
 							<svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><defs><style>.cls-1{fill:none;}</style></defs><title>phone</title><path d="M26,29h-.17C6.18,27.87,3.39,11.29,3,6.23A3,3,0,0,1,5.76,3h5.51a2,2,0,0,1,1.86,1.26L14.65,8a2,2,0,0,1-.44,2.16l-2.13,2.15a9.37,9.37,0,0,0,7.58,7.6l2.17-2.15A2,2,0,0,1,24,17.35l3.77,1.51A2,2,0,0,1,29,20.72V26A3,3,0,0,1,26,29ZM6,5A1,1,0,0,0,5,6v.08C5.46,12,8.41,26,25.94,27A1,1,0,0,0,27,26.06V20.72l-3.77-1.51-2.87,2.85L19.88,22C11.18,20.91,10,12.21,10,12.12l-.06-.48,2.84-2.87L11.28,5Z" transform="translate(0)"/><rect class="cls-1" width="32" height="32"/></svg>
 							<div class="ml1">919-604-1902</div>
 						</div>
@@ -52,7 +64,7 @@
 			
 			<div class="section links flex">
 				<div class="left-col">Profiles &amp;<br>portfolios</div>
-				<div class="right-col">
+				<div class="right-col lh-copy">
 					<div>• <a class="ml1" href="https://linkedin.com/in/santelia" target="_blank">linkedin.com/in/santelia</a></div>
 					<div>• <a class="ml1" href="https://github.com/ecumike" target="_blank">github.com/ecumike</a></div>
 					<div>• <a class="ml1" href="https://patents.google.com/?inventor=Michael+Santelia" target="_blank">patents.google.com/?inventor=Michael+Santelia</a></div>
