Update: Proper spelling

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					
 					<div class="work-company">Estimand</div>
 					<div class="work-experience-section">
-						<div class="work-title">Principle Software Engineer</div>
+						<div class="work-title">Principal Software Engineer</div>
 						<div class="work-dates">Aug 2023 – Present</div>
 						
 						<ul class="bl-bullet-list">
