--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="section summary flex">
 				<div class="left-col">Summary</div>
 				<div class="right-col">
-					Pragmatic experienced Senior Software Engineer and Technical Lead known for intuitive and innovative full-stack solutions. Expert in Agile, DevOps, and UX principles. Skilled in end-to-end development and recognized for solving complex issues and solutions with speed. Nicknamed "The Cleaner" for tackling challenging problems.
+					Pragmatic Senior Software Engineer, Technical Lead, adrenaline junkie, and grenade diffuser known for intuitive and innovative full-stack solutions. Expert in Agile, DevOps, and UX principles. Skilled in end-to-end development and recognized for solving complex issues and solutions with speed. Nicknamed "The Cleaner" for tackling challenging problems.
 				</div>
 			</div>
 			
