--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 						<div class="work-dates">Aug 2023 – Present</div>
 						
 						<ul class="bl-bullet-list">
+							<li>Design and develop company web site and blogging platform.</li>
 							<li>Provide technical leadership and ensure development best practices and coding standards to maintain code quality and maintainability.</li>
 							<li>Evaluate new technologies and make recommendations for adoption.</li>
 							<li>Identify technical risks and develop strategies to mitigate them.</li>
