Update: Intro tweak and file name change

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<div class="flex justify-between">
 						<div class="name mt3 f2" style="margin-left: -5px;">Michael Santelia</div>
 						<div>
-							<a href="Resume - Michael Santelia.pdf" target="blank" class="bl-current-color dn items-center">
+							<a href="Michael Santelia - Resume.pdf" target="blank" class="bl-current-color flex items-center">
 								<svg class="icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><defs><style>.cls-1{fill:none;}</style></defs><title>document--download</title><polygon points="30 25 28.586 23.586 26 26.172 26 18 24 18 24 26.172 21.414 23.586 20 25 25 30 30 25"/><path d="M18,28H8V4h8v6a2.0058,2.0058,0,0,0,2,2h6v3l2,0V10a.9092.9092,0,0,0-.3-.7l-7-7A.9087.9087,0,0,0,18,2H8A2.0058,2.0058,0,0,0,6,4V28a2.0058,2.0058,0,0,0,2,2H18ZM18,4.4,23.6,10H18Z"/><rect class="cls-1" width="32" height="32"/></svg>
 								<span class="ml1">PDF version</span>
 							</a>
@@ -58,7 +58,7 @@
 			<div class="section summary flex">
 				<div class="left-col">Summary</div>
 				<div class="right-col">
-					Not just your typical Engineer. I'm a pragmatic Senior Software Engineer, Technical Lead, adrenaline junkie, and grenade diffuser known for intuitive and innovative full-stack solutions with a focus on user experience. Expert in Agile, DevOps, and UX principles. Skilled in end-to-end development and recognized for solving complex issues and solutions with speed. Nicknamed "The Cleaner" for tackling challenging problems.
+					Not just your typical Engineer. I'm a pragmatic Senior Software Engineer, Technical Lead, adrenaline junkie, and grenade diffuser known for intuitive and innovative full-stack solutions with a focus on user experience. Expert in Agile, DevOps, and UX principles, I make data-driven decisions from A/B tests, UX research, and talking to users. Skilled in end-to-end development and recognized for solving complex issues and solutions with speed. Nicknamed "The Cleaner" for tackling challenging problems.
 				</div>
 			</div>
 
