Updated with CoreStory

--- a/index.html
+++ b/index.html
@@ -175,10 +175,31 @@
 			<div class="section experience flex">
 				<div class="left-col">Professional<br />experience</div>
 				<div class="right-col">
+					<div class="work-company">CoreStory</div>
+					<div class="work-experience-section">
+						<div class="work-title">Senior Software Engineer</div>
+						<div class="work-dates">Aug 2024 – Present</div>
+
+						<ul class="bl-bullet-list">
+						  <li>
+							Senior engineer on an AI-driven product requirements platform, building and evolving core workflows to product actionable product narratives.
+						  </li>
+						  <li>
+							Design and implement backend services and APIs powering AI-assisted requirement generation, document analysis, and structured outputs.
+						  </li>
+						  <li>
+							Lead complex debugging and system cleanup efforts, stabilize critical paths and solution high-risk, high-impact problems.
+						  </li>
+						  <li>
+							Partner with Product and UX to translate ambiguous user needs into intuitive features, shipping quickly while maintaining quality and performance.
+						  </li>
+						</ul>
+					</div>
+
 					<div class="work-company">InfoBeans</div>
 					<div class="work-experience-section">
 						<div class="work-title">Lead Software Engineer</div>
-						<div class="work-dates">Dec 2023 – Present</div>
+						<div class="work-dates">Dec 2023 – Aug 2024</div>
 
 						<ul class="bl-bullet-list">
 							<li>
@@ -282,7 +303,7 @@
 						</ul>
 					</div>
 
-					<div class="work-experience-section">
+					<div class="page-break work-experience-section">
 						<div class="work-title">Senior Software Engineer / SME / Advisory Architect</div>
 						<div class="work-dates">2009 – 2014</div>
 
@@ -311,7 +332,7 @@
 						</ul>
 					</div>
 
-					<div class="page-break work-experience-section">
+					<div class="work-experience-section">
 						<div class="work-title">Lead Developer / SME / Advisory IT Specialist</div>
 						<div class="work-dates">2000 – 2009</div>
 
